# home-manipulation

./: .gitignore  .gitmodules  Makefile  README.md
docker/: Dockerfile.manipulation  Dockerfile.manipulation-full.cuda  Dockerfile.manipulation.cuda  Dockerfile.zed.cuda
docker/requirements/: manipulation_requirements.txt
docker/scripts/: build.bash  run.bash
src/pouring_services/scripts/: pouring_srv.py
ws/: pcl_after_filter.pcd
ws/src/cartesian_movement_services/: CMakeLists.txt  package.xml
ws/src/cartesian_movement_services/arm_scripts/: arm_movements.py  pouring_srv.py
ws/src/cartesian_movement_services/msg/: moveXYZ.msg
ws/src/cartesian_movement_services/scripts/: arm_movements.py  cartesian_client.py  cartesian_server.py  cartesian_server_2.py
ws/src/cartesian_movement_services/srv/: MoveJoint.srv  MovePose.srv  Pick.srv  PickAndPlace.srv  PickAndPlaceVertical.srv  PickAndPour.srv  PlaceInShelf.srv  Pour.srv  TurnEndEffector.srv
ws/src/dashgo_moveit_config/: package.xml
ws/src/dashgo_moveit_config/config/: dashgo.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
ws/src/dashgo_moveit_config/launch/: dashgo_moveit_sensor_manager.launch.xml  dashgo_xarm.launch  demo.launch  gazebo.launch  gazebo_sim.launch  move_group.launch  moveit_rviz.launch  moveit_rviz_common.launch  sim.launch
ws/src/dashgo_moveit_config/rviz/: rvizManipulation.rviz
ws/src/frida_arm_joints_server/: CMakeLists.txt  package.xml
ws/src/frida_arm_joints_server/scripts/: arm_joint_server.py  set_named_target_example.py
ws/src/frida_manipulation_interfaces/: CMakeLists.txt
ws/src/frida_manipulation_interfaces/action/: manipulationPickAndPlace.action
ws/src/object_detector_2d/: CMakeLists.txt  package.xml
ws/src/object_detector_2d/include/: vision_utils.py
ws/src/object_detector_2d/launch/: multi_object_detector_2d.launch  object_2D.launch  object_2D_picker.launch
ws/src/object_detector_2d/scripts/: Detection2D.py  DetectionPicker.py  MultiObjectDetector2D.py
ws/src/object_detector_3d/: CMakeLists.txt  package.xml
ws/src/object_detector_3d/action/: DetectObjects3D.action  ShelvePlacePosition.action
ws/src/object_detector_3d/launch/: object_3D.launch  object_3D.robocup2024.launch  object_3D.shelves.launch  object_3D.tmr2023.launch
ws/src/object_detector_3d/scripts/: getObb.py  heatmapPlace_Server.py
ws/src/object_detector_3d/src/: Clustering_Client.cpp  Clustering_Server.py  Detection3D.cpp  Detection3DHeatmap.cpp  Detection3DKmeans.cpp  Detection3DPlace.cpp  Detection3DShelves.cpp  Detection3DShelvesClient.cpp  Heatmap_Client.cpp  SaveOctomap.cpp
ws/src/pick_and_place/: CMakeLists.txt  package.xml
ws/src/pick_and_place/config/: dashgo_eigen_params_SF.cfg  params_DASHGO.yaml
ws/src/pick_and_place/launch/: cartesian.manipulation.launch  cartesian.manipulation.multidetector.launch  cartesian.manipulation.no2D.launch  manipulation.launch  manipulation.no2D.launch
ws/src/pick_and_place/scripts/: cartesianManipulationServer.py  manipulationCaller.py  manipulationClient.py  manipulationServer.py  pick_and_place_server.py
ws/src/pouring_services/: CMakeLists.txt  package.xml
ws/src/pouring_services/scripts/: pouring_srv.py
ws/src/robot_description/: package.xml
ws/src/robot_description/launch/: display.dashgo.launch
ws/src/robot_description/meshes/: Brazo_1.STL  Brazo_2.STL  Elevador.STL  Lidar.STL  R1.STL  R2.STL  R3.STL  R4.STL  base_link.STL
ws/src/robot_description/meshes/Dashgo/: Base.STL  BaseBrazo.STL  Llanta1.STL  Llanta2.STL  LlantaLoca1.STL  LlantaLoca2.STL  Loca2.STL
ws/src/robot_description/rviz/: urdf.rviz
ws/src/robot_description/urdf/: dashgo.urdf.xacro  dashgo_sim.urdf.xacro
ws/src/robot_description/urdf/gripper/: gripperSF.urdf.xacro  gripper_sim.urdf.xacro
ws/src/robot_description/urdf/include/: base_macro.urdf.xacro  depthai_macro.urdf.xacro
